# sml_summerproject

./: Procfile  README.md  nano.save  nano.save.1  package-lock.json  run_car_script  run_default_script
myapp/: app.js  code.py  code_real.py  default.py  package-lock.json  package.json  script.py  teamNames-backup.json  teamNames.json  teamNames.txt
myapp/assets/: style.css
myapp/customBlocks/: customBlocks.js
myapp/views/: 404page.ejs  adminPage.ejs  firstPage.ejs  helpPage.ejs  index.ejs  lastPage.ejs  level1.ejs  level2.ejs  level3.ejs  placementTest.ejs  test.ejs  test2.ejs  test3.ejs  test4.ejs
myapp/views/partials/: adminFunctions.js  cancelRun.ejs  helpTab.ejs  hitModal.ejs  imports.ejs  modal1.ejs  modal1and2.ejs  modal2.ejs  modal3.ejs  nav.ejs  runCodeFunction.js  runOnCarFunction.ejs  runOnCarFunctions.js  runOrCancelBtns.ejs  simulationWindow.ejs  simulationWindow.js  simulationWindowFunctions.js  simulationWindow_temp.ejs  spinner.ejs  tryAgainModal.ejs  tutorial.ejs  wallModal.ejs  whichButton.ejs  workspacePlacementFunctions.js
myapp/views/videos/: hitRock.webm  hitRockCross.webm  lastGoal.webm  newHitVid.webm  newRunning.webm  newToGoal.webm  newlooool.webm  reachGoal.webm  reachGoalCheck.webm  runCodeFull.webm  stockvideo2.webm
password/: password.txt
svea_starter/: README.md
svea_starter/src/fake_odometry/: CMakeLists.txt  package.xml
svea_starter/src/my_map/: CMakeLists.txt  map.yaml  package.xml
svea_starter/src/my_robot_name_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  move_base.launch  my_robot_configuration.launch  package.xml
svea_starter/src/navigation/amcl/examples/: amcl_diff.launch
svea_starter/src/navigation/robot_pose_ekf/: CMakeLists.txt  robot_pose_ekf.launch
svea_starter/src/qualisys/: .travis.yml  CMakeLists.txt  README.md  package.xml
svea_starter/src/qualisys/include/qualisys/: KalmanFilter.h  QualisysCalib.h  QualisysDriver.h  QualisysOdom.h  yaml_utils.h
svea_starter/src/qualisys/launch/: qualisys.launch  qualisys_odom.launch
svea_starter/src/qualisys/msg/: Markers.msg  Subject.msg
svea_starter/src/qualisys/src/: KalmanFilter.cpp  QualisysCalib.cpp  QualisysDriver.cpp  QualisysOdom.cpp  RTClient6DOFExample.cpp  qualisys.cpp  qualisys.cpp.bak  qualisys_calib.cpp  qualisys_odom.cpp  yaml_utils.cpp
svea_starter/src/robot_setup_tf/: CMakeLists.txt  package.xml
svea_starter/src/robot_setup_tf/src/: tf_broadcaster.cpp
svea_starter/src/svea/: CMakeLists.txt  package.xml
svea_starter/src/svea/launch/: SVEA_drive.launch  SVEA_high_level_commands.launch  SVEA_keyteleop.launch  SVEA_multi.launch  SVEA_purepursuit.launch  amcl_SVEA_high_level_commands.launch  lidar_test.launch  sim_SVEA_high_level_commands.launch  sim_SVEA_keyteleop.launch  sim_SVEA_purepursuit.launch  zed_SVEA_high_level_commands.launch
svea_starter/src/svea/src/controllers/: control_interfaces.py  control_interfaces_new.py  control_interfaces_old.py  control_interfaces_sim.py
svea_starter/src/svea/src/localizers/: qualisys_localizers.py  qualysis_localizers.py
svea_starter/src/svea/src/models/: bicycle_simple.py
svea_starter/src/svea/src/sensors/: lidars.py
(+31 files in other folders)
